--- a/package.json
+++ b/package.json
@@ -2,15 +2,17 @@
   "name": "transfers-indexer",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
+  "main": "src/index.ts",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "npx ts-node src/index.ts"
   },
   "author": "",
   "license": "ISC",
   "dependencies": {
     "axios": "^1.5.1",
     "dotenv": "^16.3.1",
+    "fastify": "^4.23.2",
     "typescript": "^5.2.2"
   }
 }
