--- a/package.json
+++ b/package.json
@@ -10,9 +10,11 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@types/node": "^20.7.1",
     "axios": "^1.5.1",
     "dotenv": "^16.3.1",
     "fastify": "^4.23.2",
+    "npm": "^10.1.0",
     "typescript": "^5.2.2"
   }
 }
